--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <DOCTYPE! HTML>
 <html>
 <head>
+  <script type="text/javascript" src="jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="keymaster-master/keymaster.min.js"></script>
+  <script type="text/javascript" src="app.js"> </script>
+	<script type="text/javascript" src="moving_object.js"> </script>
+	<script type="text/javascript" src="asteroid.js"> </script>
+	<script type="text/javascript" src="ship.js"> </script>
+	<script type="text/javascript" src="bullet.js"> </script>
+	<script type="text/javascript" src="game.js"> </script>
+	
 </head>
 
 <body>
-  <script type="text/javascript" src="jquery-1.9.1.js"></script>
-  <!-- // <script type="text/javascript" src="asteroids.js"></script> -->
-  <script type="text/javascript" src="keymaster-master/keymaster.min.js"></script>
-  <script type="text/javascript" src="app.js"> </script>
-  <script type="text/javascript">
-  // key('a', function(){ alert('you pressed a!') });
-  </script>
+	<h1> Welcome to the Asteroids game</h1>
+	<div>
+		How to play:
+	</div>
+	<div class="game-window">
+	
+	</div>
 </body>
-
 </html>
